--- a/students/tina-hang.html
+++ b/students/tina-hang.html
@@ -22,8 +22,7 @@
 
           <a href="https://www.linkedin.com/in/tinahang/"><img class="social-icon" src="../assets/img/linkedin-icon.png" alt="LinkedIn logo"/></a>
           <a href="https://github.com/thetinahang"><img class="social-icon" src="../assets/img/github-icon.png" alt="github logo"/></a>
-
-          <!-- <a href="https://twitter.com/thezoltan"><img class="social-icon" src="../assets/img/twitter-icon.png" alt="Twitter Logo"/></a> -->
+          <a href="https://www.tinahang.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
 
         </div>
         <div class="vitals-text-container">
@@ -49,7 +48,7 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-               <h4> The Flatiron School</h4>
+              <h4> The Flatiron School</h4>
               <h5>Learn-Verified Full Stack Web Development</h5>
               <h4>Santa Barbara City College, Santa Barbara, California</h4>
               <h5>Currently working on A.S. in Computer Information Systems</h5>
